# poetry_default

./: README.md  pyproject.toml
auto_build_shells/: build_3.10.13.sh  build_3.11.12.sh
