[tool.poetry]
name = "poetry_default"
version = "0.1.0"
description = ""
authors = ["kotaNakm <kotaNakm0317@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9.13"
numpy = "^1.24.3"
pandas = "^2.0.2"
scikit-learn = "^1.2.2"
jupyter = "^1.0.0"
ipykernel = "^6.23.1"
matplotlib = "3.5.3"
seaborn = "^0.12.2"
argparse = "^1.4.0"
importlib = "^1.0.4"
black = "^23.3.0"
tqdm = "^4.65.0"
dill = "^0.3.6"
urllib3 = "1.26.7"
jupyterlab = "^4.0.6"
japanize-matplotlib = "^1.1.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
